# audio-transcribe

./: AudioTranscribe-Windows-Installer.bat  AudioTranscribe.spec  CLAUDE.md  DEMO.md  README.md  RELEASE_NOTES.md  WINDOWS_SETUP.md  build_windows_installer.py  create_portable_executable.sh  create_release_structure.sh  debug_websocket.html  install_unix.sh  install_windows.bat  main.py  package.json  pyproject.toml  run_with_uv.bat  run_with_uv.sh  start_app.py  take_screenshots.py  test_mvp.py  test_websocket.py  unix_installer.sh
backend/: README.md  audio_capture.py  main.py  model_manager.py  setup_system_audio.py  transcription.py
backend/models/: model_config.json
docs/: index.html
frontend/: README.md  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tools/: zip_portable.py
