[project]
name = "audio-transcribe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "sounddevice>=0.5.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "PyAudioWPatch>=0.2.12.5; sys_platform=='win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "W",  # pycodestyle warnings
    "N",  # pep8-naming
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "PIE",# flake8-pie
    "RET",# flake8-return
    "SIM",# flake8-simplify
    "PTH",# flake8-use-pathlib
]
ignore = [
    "E203", # whitespace before ':' (formatter conflict)
    "E501", # line length (handled by line-length)
    "D",    # pydocstyle (docstrings enforced separately)
    "ANN",  # type-annotation rules (too strict for now)
]

 
